examples/lexer/bad/06_missing_assignment.sg
// Ошибка: пропущен знак присваивания
fn test_assignment() -> int {
    let x:int = 42;
    let y:int;
    y 10;  // пропущен знак =
    return x + y;
}
